fixed misaligned project card text

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -171,6 +171,7 @@ $color-accent-5: #009EDA
         justify-content: space-between
         justify-self: flex-end
         align-items: center
+        margin-top: auto
         padding: 0.5em 0.5em
 
         a
